Revision history for Perl extension Geo::Coordinates::GMap.

{{$NEXT}}

0.04      2010-06-23
 - Use Dist::Zilla to build distro.

0.03 :
 - Output tile_x and tile_y as floats.
 - Move pixel xy calculation in to the new gmap_tile_xy().
 - New function to convert zoom levels called zoom_gmap_tile().

0.02 : 2009-04-16
 - Doc fixes that were fooing the cpan.

0.01 : 2009-04-15
 - First release.
