@@ -1,6 +1,7 @@
-name    = Geo-Coordinates-GMap
-author  = Aran Deltac <bluefeet@gmail.com>
-license = Perl_5
+name     = Geo-Coordinates-GMap
+abstract = Routines for converting decimal lat/lon to Google Map tiles, and back again.
+author   = Aran Deltac <bluefeet@gmail.com>
+license  = Perl_5
 copyright_holder = Aran Deltac
 
 [@Basic]
@@ -10,15 +11,19 @@ copyright_holder = Aran Deltac
 format = %-9v %{yyyy-MM-dd}d
 
 [@Git]
-[BumpVersionFromGit]
-[Repository]
+[Git::NextVersion]
+first_version = 0.01
 
+[Repository]
 [PkgVersion]
 [PodCoverageTests]
 [PodSyntaxTests]
 
 [Bugtracker]
 [CompileTests]
+
+[Prereqs]
+Exporter = 5.57
 
 [Prereq / TestRequires]
 Test::Simple    = 0.94
