@@ -1,6 +1,9 @@
 Revision history for Perl extension Geo::Coordinates::GMap.
 
 {{$NEXT}}
+ - Adjust depencies so that Perl 5.6.2 isn't tested with its old
+   version of exporter.
+ - Spelling fixes in the docs.
 
 0.04      2010-06-23
  - Use Dist::Zilla to build distro.
